welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.code
def inOrderEqual(a:Int, b:Int, c:Int, equalOk:Boolean):Boolean = {
  if (a<b<c){
    return true
  }
  if (equalOk && a<b<c){
    return true
  }
  return false
}